--- a/package.json
+++ b/package.json
@@ -18,13 +18,8 @@
     "react-dom": "^18.3.1",
     "react-icon": "^1.0.0",
     "react-icons": "^5.2.1",
-    "react-loader-spinner": "^6.1.6",
-    "react-particles-js": "^3.6.0",
     "react-router": "^6.25.1",
-    "react-router-dom": "^6.25.1",
-    "react-tsparticles": "^2.12.2",
-    "tsparticles": "^3.5.0",
-    "tsparticles-engine": "^2.12.0"
+    "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
